--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -1,10 +1,12 @@
 <!doctype html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/zombie-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <meta name="description" content="Cyberpunk zombie apocalypse survivor terminal interface" />
+    <meta name="theme-color" content="#000000" />
+    <title>🧟 Zombie Terminal - Outbreak Protocol</title>
   </head>
   <body>
     <div id="root"></div>
