Change to favicon

--- a/apps/frontend/index.html
+++ b/apps/frontend/index.html
@@ -2,11 +2,11 @@
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/zombie-icon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Cyberpunk zombie apocalypse survivor terminal interface" />
     <meta name="theme-color" content="#000000" />
-    <title>🧟 Zombie Terminal - Outbreak Protocol</title>
+    <title>Zombie Terminal</title>
   </head>
   <body>
     <div id="root"></div>
